plugins {
    id 'java'
    id 'org.springframework.boot' version '3.0.5'
    id 'io.spring.dependency-management' version '1.1.0'
}

group = 'apps.progfort'
version = '1'
sourceCompatibility = '17'

repositories {
    mavenCentral()
}

dependencies {
   // compileOnly "org.springframework.boot:spring-boot-starter-security"
    compileOnly 'org.projectlombok:lombok:1.18.26'

    implementation 'io.soabase.record-builder:record-builder-core:36'
    implementation 'io.projectreactor.netty:reactor-netty:1.1.6'
    implementation 'org.springframework:spring-webflux:6.0.8'
    implementation 'software.amazon.awssdk:sdk-core:2.17.69'
    implementation 'software.amazon.awssdk:auth:2.17.69'
    implementation "me.paulschwarz:spring-dotenv:3.0.0"
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.projectlombok:lombok:1.18.26'
    implementation 'org.springframework.boot:spring-boot-starter-web'

    runtimeOnly 'com.h2database:h2'

    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.3.0'
    testImplementation 'org.mockito:mockito-core:5.3.0'
}

tasks.named('test') {
    useJUnitPlatform()
}
